[project]
name = "Bot-Get-Cert"
version = "3.2"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "aiofiles==24.1.0",
    "aiogram==3.17.0",
    "aiohappyeyeballs==2.4.4",
    "aiohttp==3.11.11",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "arq==0.26.3",
    "attrs==24.3.0",
    "certifi==2024.12.14",
    "chardet==5.2.0",
    "click==8.1.8",
    "colorama==0.4.6",
    "environs==14.1.0",
    "frozenlist==1.5.0",
    "h11==0.14.0",
    "hiredis==3.1.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "idna==3.10",
    "magic-filter==1.0.12",
    "marshmallow==3.25.1",
    "multidict==6.1.0",
    "packaging==24.2",
    "pillow==11.1.0",
    "propcache==0.2.1",
    "pydantic==2.10.5",
    "pydantic-core==2.27.2",
    "pypdf2==3.0.1",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.2",
    "redis==5.2.1",
    "reportlab==4.2.5",
    "sniffio==1.3.1",
    "typing-extensions==4.12.2",
    "yarl==1.18.3",
]
